# mygobot

./: .gitignore  LICENSE  PRIVACY.md  README.md  TOS.md  config.yml  help.md  image_map.py  imagegetter.py  main.py  mygo.json  pyproject.toml  selfhost.md  token.txt
